# PyPi_package_structure

./: LICENSE  README.md  setup.cfg
src/example__package/: connect.py
