[metadata]
name = SPGenerator-package
version = 0.0.3
author = sedani jay
author_email = sedanijay.a@gmail.com
description = To generate SQL or MySQL CRUD stored procedures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sedanijay/StoredProcedures_Generator
project_urls =
    Bug Tracker = https://github.com/sedanijay/StoredProcedures_Generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src